kubernetes/services-lb-ingress-nodeport/hello-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: NodePort
  selector:
    name: hello-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30100
